--- a/login/index.html
+++ b/login/index.html
@@ -36,14 +36,15 @@
                             <form>
                                 <!-- Email input -->
                                 <div data-mdb-input-init class="form-outline mb-4">
-                                    <input type="email" id="form3Example3" class="form-control" />
                                     <label class="form-label text-white" for="form3Example3">Email address</label>
+                                    <input type="email" id="form3Example3" class="form-control" placeholder="sample@showdog.com" />
                                 </div>
                                 <!-- Password input -->
                                 <div data-mdb-input-init class="form-outline mb-4">
-                                    <input type="password" id="form3Example4" class="form-control" />
                                     <label class="form-label text-white" for="form3Example4">Password</label>
+                                    <input type="password" id="form3Example4" class="form-control" placeholder="password"/>
                                 </div>
+                                
                                 <!-- Submit button -->
                                 <button type="submit" data-mdb-button-init data-mdb-ripple-init
                                     class="btn btn-dark btn-lg btn-block" style="width: 100%;">
