--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -23,7 +23,7 @@
           Take Flight!
         </p>
         <div class="button_container">
-          <a class="btn btn-primary">Start Today</a>>
+          <a class="btn btn-primary">Start Today</a> <p> &nbsp</p>
           <a class="btn btn-secondary">Sign In</a>
         </div>
       </div>
