--- a/userpage/index.html
+++ b/userpage/index.html
@@ -28,10 +28,10 @@
         <h1>SHOWDOG</h1>
       </a>
       <div class="nav_links">
-        <a href="http://">Home</a>
-        <a href="http://">Projects</a>
-        <a href="http://">Library</a>
-        <a href="http://">Explore</a>
+        <a href="/">Home</a>
+        <a href="/product-description/index.html">Projects</a>
+        <a href="/userpage/index.html">Library</a>
+        <a href="/landing_page/index.html">Explore</a>
       </div>
       <div class="nav_search">
         <i class="fas fa-search"></i>
