--- a/product-description/index.html
+++ b/product-description/index.html
@@ -17,10 +17,10 @@
     <nav>
       <a href="#" class="logo"><h1>SHOWDOG</h1></a>
       <div class="nav_links">
-        <a href="http://">Home</a>
-        <a href="http://">Projects</a>
-        <a href="http://">Library</a>
-        <a href="http://">Explore</a>
+        <a href="/">Home</a>
+      <a href="/product-description/index.html">Projects</a>
+      <a href="/userpage/index.html">Library</a>
+      <a href="/landing_page/index.html">Explore</a>
       </div>
       <div class="nav_search">
         <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
