--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </a>
     <div class="nav_links">
       <a href="/">Home</a>
-      <a href="/product-description/index.html">Projects</a>
-      <a href="/userpage/index.html">Library</a>
-      <a href="/landing_page/index.html">Explore</a>
+      <a href="/product-description.html">Projects</a>
+      <a href="/userpage.html">Library</a>
+      <a href="/landing.html">Explore</a>
     </div>
     <div class="nav_search">
       <i class="fas fa-search"></i>
