--- a/product-description.html
+++ b/product-description.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="product-descriptionstyle.css" />
     <title>Project Description||page</title>
   </head>
   <body>
@@ -18,9 +18,9 @@
       <a href="#" class="logo"><h1>SHOWDOG</h1></a>
       <div class="nav_links">
         <a href="/">Home</a>
-      <a href="/product-description/index.html">Projects</a>
-      <a href="/userpage/index.html">Library</a>
-      <a href="/landing_page/index.html">Explore</a>
+        <a href="/product-description.html">Projects</a>
+        <a href="/userpage.html">Library</a>
+        <a href="/landing.html">Explore</a>
       </div>
       <div class="nav_search">
         <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
