--- a/userpage.html
+++ b/userpage.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="userstyle.css" />
     <title>User||page</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -29,9 +29,9 @@
       </a>
       <div class="nav_links">
         <a href="/">Home</a>
-        <a href="/product-description/index.html">Projects</a>
-        <a href="/userpage/index.html">Library</a>
-        <a href="/landing_page/index.html">Explore</a>
+        <a href="/product-description.html">Projects</a>
+        <a href="/userpage.html">Library</a>
+        <a href="/landing.html">Explore</a>
       </div>
       <div class="nav_search">
         <i class="fas fa-search"></i>
