--- a/landing.html
+++ b/landing.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="landingstyles.css" />
   </head>
   <body>
     <div class="hero">
