--- a/product-description.html
+++ b/product-description.html
@@ -17,7 +17,7 @@
     <nav>
       <a href="#" class="logo"><h1>SHOWDOG</h1></a>
       <div class="nav_links">
-        <a href="/">Home</a>
+        <a href="index.html">Home</a>
         <a href="/product-description.html">Projects</a>
         <a href="/userpage.html">Library</a>
         <a href="/landing.html">Explore</a>
