--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <h1>SHOWDOG</h1>
     </a>
     <div class="nav_links">
-      <a href="/">Home</a>
-      <a href="/product-description.html">Projects</a>
-      <a href="/userpage.html">Library</a>
-      <a href="/landing.html">Explore</a>
+      <a href="index.html">Home</a>
+      <a href="product-description.html">Projects</a>
+      <a href="userpage.html">Library</a>
+      <a href="landing.html">Explore</a>
     </div>
     <div class="nav_search">
       <i class="fas fa-search"></i>
