--- a/product-description.html
+++ b/product-description.html
@@ -18,9 +18,9 @@
       <a href="#" class="logo"><h1>SHOWDOG</h1></a>
       <div class="nav_links">
         <a href="index.html">Home</a>
-        <a href="/product-description.html">Projects</a>
-        <a href="/userpage.html">Library</a>
-        <a href="/landing.html">Explore</a>
+        <a href="product-description.html">Projects</a>
+        <a href="userpage.html">Library</a>
+        <a href="landing.html">Explore</a>
       </div>
       <div class="nav_search">
         <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
